Fix positioning of slider status and arrows, reduce z-index for arrows

--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -25,7 +25,7 @@
         border-radius: 0;
         background-color: transparent;
         bottom: 24px;
-        z-index: 10;
+        z-index: 1;
         left: 130px;
         border-top: none;
       }
@@ -417,12 +417,13 @@
         width: 100%;
         height: 87px;
         padding-left: calc(50% - 100px);
+        position: relative;
       }
 
       &-arrow {
         &-prev,
         &-next {
-          bottom: -64px;
+          bottom: 24px;
         }
 
         &-prev {
@@ -436,8 +437,6 @@
     }
 
     .about {
-      margin-top: 87px;
-
       &__col {
         p.bold {
           margin-top: 48px;
